# PickPlaz-ESP32-C3-Port

./: .buildinfo  .gitignore  README.md  STM32_BASELINE.sha256  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js  workflows.html
ESP32Port/pickplazESP32Port/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.internal  Makefile  NOTICE.md  PORTING_DESIGN.md  PROJECT_DEPENDENCIES.md  README.md  STAGE3_Plan.md  STAGES.md  WORKFLOWS.md  platformio.ini  pyproject.toml  sdkconfig.esp32-c3-devkitm-1  sdkconfig.qemu
ESP32Port/pickplazESP32Port/docs/: Doxyfile  Doxyfile.internal  Makefile  doxygen_main.md  pyproject.toml  requirements.txt
ESP32Port/pickplazESP32Port/docs/source/: conf.py  index.md
ESP32Port/pickplazESP32Port/docs/source/api/: index.rst
ESP32Port/pickplazESP32Port/docs/source/design/: porting_design.md
ESP32Port/pickplazESP32Port/docs/source/stages/: overview.md  stage1_lessons.md  stage1_qemu_lessons.md  stage2_plan.md
ESP32Port/pickplazESP32Port/docs/source/tooling/: qemu_setup.md
ESP32Port/pickplazESP32Port/docs/visuals/: Makefile  led_other_states_scene.py  led_phase_scene.py  led_phase_scroll_scene.py  sine_wave_scene.py
ESP32Port/pickplazESP32Port/include/: board_pins.h  hal.h  hal_config.h  pickplaz_app.h
ESP32Port/pickplazESP32Port/scripts/: merge_flash.sh  publish_gh_pages.sh  qemu_smoke.sh  run_flash_qemu.sh  run_qemu.sh  run_qemu_external.sh  run_qemu_with_monitor.sh
ESP32Port/pickplazESP32Port/src/: hal.c  main.c  pickplaz_app.c  sintab.c
_sources/: index.md.txt
_static/: custom.css
api/: index.html
design/: LED_ANALYSIS.html  MOTOR_PWM_ANALYSIS.html  porting_design.html
(+905 files in other folders)
