[project]
name = "pickplazESP32Port"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pyright",
    "pytest",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-select = ["E", "W", "F"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "recommended"

[tool.pytest.ini_options]
testpaths = ["tests"]
