[project]
name = "docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pyright",
    "pytest",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-select = ["E", "W", "F"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "recommended"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "breathe>=4.36.0",
    "exhale>=0.3.7",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
