[project]
name = "docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
dev = [
    "breathe>=4.36.0",
    "exhale>=0.3.7",
    "groundwork-sphinx-theme>=1.1.1",
    "manim>=0.19.2",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
